# deckset-inline

./: .gitignore  LICENSE  README.markdown  setup.cfg
.github/workflows/: pythonpackage.yml
src/deckset_inline/: __init__.py  inliner.py
test/: test_all.py
