[metadata]
name = deckset-inline
description = A tool to inline content in a Deckset Markdown file
long_description = file:README.markdown
long_description_content_type=text/markdown
license = MIT
license_file = LICENSE
version = attr:deckset_inline.VERSION
requires_python >= 3.8
url = https://github.com/jdevera/deckset-inline
author = Jacobo de Vera
author_email = devel@jacobodevera.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Topic :: Text Processing :: Filters
    Topic :: Utilities

[options]
package_dir =
    =src
packages = find:

[options.entry_points]
console_scripts=
    deckset-inline = deckset_inline:main

[options.packages.find]
where = src

[flake8]
max-line-length = 120
